# grasp-ai

./: .gitignore  README.md  anthropic_prompt_generator.ipynb  main.py  pyproject.toml
.github/agents/: planner.agent.md
docs/prompting/01_use_markdown/: tests.csv
docs/prompting/03_steps_examples/: tests.csv
docs/prompting/05_role_based/: tests.md
mcp-client/: client.py
prompting/02_provide_steps_examples/: tests.csv
prompting/04_role_based/: tests.csv
prompting/05_role_based/: prompt.md
prompting/inputs/: google-test-prompt-2.md  google-test-prompt-3.md  google-test-prompt-4.md  google-test-prompt.md
src/main/foundry-local/: app.py  main.py  pyproject.toml
src/main/foundry-local/samples/document-summarizer/: document.txt  main.py  pyproject.toml
src/main/foundry-local/samples/multi-turn-chat-assistant/: README.md  main.py  pyproject.toml
src/main/foundry-local/samples/multi-turn-chat-assistant/prompts/: system_prompt.py
src/main/foundry-local/samples/rag-application/: main.py  pyproject.toml
src/main/foundry-local/samples/tutorial-tool-calling/: README.md  main.py  pyproject.toml
src/main/foundry-local/samples/voice-to-text-note-taker/: app.py  pyproject.toml
src/main/mcp/clients/: pyproject.toml
src/main/mcp/mcp-server-demo/: pyproject.toml
src/main/mcp/servers/weather/: README.md  pyproject.toml  weather.py
weather/: weather.py
