[project]
name = "foundry-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "foundry-local-sdk>=1.1.0",
    "openai>=2.36.0",
]

[tool.uv.workspace]
members = [
    "samples/multi-turn-chat-assistant",
    "samples/tutorial-tool-calling",
    "samples/rag-application",
]
